<resources>
    <string name="app_name">Auction House App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="UserTypeArr">
        <item>Seller</item>
        <item>Buyer</item>
        <item>Auction House</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">user name</string>
    <string name="auction_house">AUCTION HOUSE</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="user_type">User Type</string>
    <string name="example_com">example@.com</string>
    <string name="nickname">Nickname</string>
    <string name="log_out">Log Out</string>
</resources>